fixed web generation link, still not generating

--- a/admin/templates/admin_job_history.html
+++ b/admin/templates/admin_job_history.html
@@ -188,7 +188,7 @@
                             {% endif %}
                         </p>
                         {% if is_own_history %}
-                        <a href="{{ url_for('caption_generation') }}" class="btn btn-primary">
+                        <a href="{{ url_for('caption.generation') }}" class="btn btn-primary">
                             <i class="bi bi-plus-circle"></i> Start Your First Job
                         </a>
                         {% endif %}
