--- a/templates/base.html
+++ b/templates/base.html
@@ -162,7 +162,7 @@
                         </li>
                         {% if active_platform %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('caption_generation') }}">
+                            <a class="nav-link" href="{{ url_for('caption.generation') }}">
                                 Generate Captions
                             </a>
                         </li>
