--- a/templates/caption_settings.html
+++ b/templates/caption_settings.html
@@ -75,7 +75,7 @@
         <div class="col-lg-8">
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <h1><i class="bi bi-gear"></i> Caption Generation Settings</h1>
-                <a href="{{ url_for('caption_generation') }}" class="btn btn-outline-secondary">
+                <a href="{{ url_for('caption.generation') }}" class="btn btn-outline-secondary">
                     <i class="bi bi-arrow-left"></i> Back to Generation
                 </a>
             </div>
