--- a/templates/review_batches.html
+++ b/templates/review_batches.html
@@ -9,7 +9,7 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h1>Caption Review Batches</h1>
     <div>
-        <a href="{{ url_for('caption_generation') }}" class="btn btn-primary">
+        <a href="{{ url_for('caption.generation') }}" class="btn btn-primary">
             <i class="bi bi-plus-circle"></i> Generate New Captions
         </a>
         <button type="button" class="btn btn-outline-info ms-2" id="showApprovalTracking">
@@ -171,7 +171,7 @@
         No caption generation batches found in the last {{ days_back }} days.<br>
         Generate some captions to create review batches.
     </p>
-    <a href="{{ url_for('caption_generation') }}" class="btn btn-primary">
+    <a href="{{ url_for('caption.generation') }}" class="btn btn-primary">
         <i class="bi bi-plus-circle"></i> Generate Captions
     </a>
 </div>
