working on flask App Responsiveness Optimization, starting step 11, playwright tests

--- a/admin/templates/base_admin.html
+++ b/admin/templates/base_admin.html
@@ -146,6 +146,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('admin.performance_dashboard') }}#responsiveness">
+                                <i class="bi bi-speedometer2"></i> Responsiveness
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('admin.help_center') }}">
                                 <i class="bi bi-question-circle"></i> Help Center
                             </a>
