--- a/templates/caption_generation.html
+++ b/templates/caption_generation.html
@@ -90,8 +90,7 @@
                         <div class="progress-details" id="progress-details">
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <small><strong>Started:</strong> {{ active_task.created_at.strftime('%Y-%m-%d
-                                        %H:%M:%S') if active_task.created_at else 'Unknown' }}</small>
+                                    <small><strong>Started:</strong> {{ active_task.created_at[:19] if active_task.created_at else 'Unknown' }}</small>
                                 </div>
                                 <div class="col-sm-6">
                                     <small><strong>Estimated completion:</strong> <span
